--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,11 @@
     <head> 
         <link rel="stylesheet" href="..\static\css\main.css">
         <link rel="shortcut icon" href="#">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Easy Tamil learning! </title>
     </head> 
     {% include "navbar.html" %}
     <h1> Welcome to learning Tamil the easy way! </h1>
+
 </html>
