--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="..\static\css\navbar.css">
+    <!-- <link rel="stylesheet" href="..\static\css\navbar.css"> -->
     <link rel="shortcut icon" href="#">
 </head>
 <div class="topnav">
